--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "A ZIP library without external dependencies",
   "author": "Jan Jongboom <janjongboom@gmail.com>",
+  "license": "MIT",
   "dependencies": { },
   "devDependencies": { },
   "engine": "node >= 0.4.9"
